--- a/creating_pirate_data_markdown.nb.Rmd
+++ b/creating_pirate_data_markdown.nb.Rmd
@@ -203,7 +203,7 @@ change_lvl <-
   sample(c(0, 1),
          nrow(pirates),
          replace = TRUE,
-         prob = c(0.91, 0.01))
+         prob = c(0.96, 0.04))
 ```
 
 Then every time it's 1 I will add a level to the assigned level, but leave the pirate level accurate and as-is when the variable is 1. This way, I will only mess up 9% of the levels.
@@ -658,7 +658,7 @@ ids_missionCount_na <-
 ids_missionHours_na <-
   pirates %>% select(pirateId) %>% slice_sample(prop = 0.02) %>% pull()
 ids_pirateLevel_na <-
-  pirates %>% select(pirateId) %>% slice_sample(prop = 0.04) %>% pull()
+  pirates %>% select(pirateId) %>% slice_sample(prop = 0.01) %>% pull()
 ids_age_na <-
   pirates %>% select(pirateId) %>% slice_sample(prop = 0.015) %>% pull()
 ids_Occupation_na <-
@@ -671,13 +671,15 @@ ids_state_na <-
   pirates %>% select(pirateId) %>% slice_sample(prop = 0.023) %>% pull()
 ```
 
+```{r instert_nas_dates}
+pirates$Mission1[c(which(pirates$pirateId %in% ids_Mission1_na))] <- NA
+pirates$missionLast[c(which(pirates$pirateId %in% ids_missionLast_na))] <- NA
+```
 For each column in the dataframe, if the IDs are in the randomly selected IDs above, we convert that column value to NA; otherwise we leave it as the value in that column.
-```{r instert_nas}
+```{r instert_nas_notdates}
 pirates %<>%
   mutate(
     crewmemberDied = ifelse(pirateId %in% ids_crewmemberDied_na , NA, crewmemberDied),
-    Mission1 = ifelse(pirateId %in% ids_Mission1_na, NA, Mission1),
-    missionLast = ifelse(pirateId %in% ids_missionLast_na, NA, missionLast),
     Crew = ifelse(pirateId %in% ids_Crew_na, NA, Crew),
     missionCount = ifelse(pirateId %in% ids_missionCount_na, NA, missionCount),
     missionHours = ifelse(pirateId %in% ids_missionHours_na, NA, missionHours),
