--- a/wrangling_pirate_data.Rmd
+++ b/wrangling_pirate_data.Rmd
@@ -13,7 +13,8 @@ library(stringr)
 library(magrittr)
 library(DataExplorer)
 library(gridExtra)
-set.seed(NULL)
+library("pastecs")
+set.seed(767898)
 ```
 
 I'm starting by setting my working directory to where my data are saved
@@ -41,7 +42,7 @@ colnames(df_pirate) <- tolower(gsub(
 colnames(df_pirate)
 ```
 
-Examing the data
+Examining the data
 looking at the first 5 rows with the head function
 nothing really jumps out at me just yet, except that I know that pirate_level 
 should be an ordinal variable, crew is a factor (the numbers are not a 
@@ -63,9 +64,10 @@ will have converted my words to numbers, and can now to math with them
 ```{r df_str}
 str(df_pirate)
 ```
+
 ```{r factor_order_fix}
 df_pirate %<>%
-  mutate(across(c(crew, state, day_or_night, occupation), as.factor),
+  mutate(across(c(crew, state, day_or_night, occupation, crewmember_died), as.factor),
          pirate_level = ordered(pirate_level))
 
 str(df_pirate)
@@ -80,13 +82,13 @@ df_pirate %>%
   count() %>%
  dplyr::filter(n > 1)
 ```
-Here we see the answer is yes, specifically 8 rows. 
+Here we see the answer is yes, specifically 5 rows. 
 I want to examine those rows 
 to see if they're just identical duplicates or something else
 
 ```{r row_id_check}
 df_pirate %>%
- dplyr::filter(pirate_id == 8274)
+ dplyr::filter(pirate_id == 20000)
 ```
 tbh since it was just a single person out of 8274 was more comfortable 
 with introducing bias into my data by removing this one person than guessing which 
@@ -95,7 +97,7 @@ Idplyr::filtered them out, although right now it's irrelevant
 ```{r rows_id_remove}
 df_pirate <- 
   df_pirate %>%
-   dplyr::filter(pirate_id != 8274)
+   dplyr::filter(pirate_id != 20000)
 ```
 
 I want to eyeball the levels of the non-numeric/datetime features
@@ -132,7 +134,7 @@ df_pirate %>%
 #lol for the fake NAs
 ```
 
-There are 637 NA rows according to the output below
+There are 690 NA rows according to the output below
 I think it's worth removing them
 If I had a bunch of time it might be worth playing around with creating a model to
 predict if and which state the NA belongs to
@@ -236,7 +238,7 @@ states_str_cleaned <-
              states)))
 #I'll also strip spaces before and after commas
 states_str_cleaned <- 
-  str_to_upper(gsub(", ",
+  str_to_lower(gsub(", ",
        ",",
        (gsub(" ,",
              ",",
@@ -257,12 +259,12 @@ states_list
 
 I'm next filtering the df based on whether the states column values is in
 my list and seeing how many rows I'll lose as a result
-It looks like it's just 55 out of like 32k so it's really not a big deal
+It looks like it's just 703 out of like 30k so it's really not a big deal
 to lose them
 ```{r}
-df_pirate_states_words %>%
+df_pirate %>%
   count() -
-  df_pirate_states_words %>%
+  df_pirate %>%
  dplyr::filter(state %in% states_list) %>%
   count()
 ```
@@ -272,13 +274,13 @@ Eyeballing that removing states by filtering through the list is doing
 what I expect it to do & it looks reasonable
 ```{r eyeball_removed_kept_states}
 #looking at states in states list and state
-df_ctl_states_words %>%
+df_pirate %>%
  dplyr::select(state) %>%
  dplyr::filter(state %in% states_list) %>% 
   distinct() %>% 
   View()
 #looking as states only in state and not in list
-df_ctl_states_words %>%
+df_pirate %>%
  dplyr::select(state) %>%
  dplyr::filter(!state %in% states_list) %>% 
   distinct() %>% 
@@ -290,7 +292,7 @@ df_ctl_states_words %>%
 
 ```{r}
 df_pirate_states <- 
-  df_pirate_states_words %>%
+  df_pirate %>%
  dplyr::filter(state %in% states_list)
 ```
 
@@ -312,7 +314,7 @@ states_str_cleaned2 <-
              states)))
 #I'll also strip spaces before and after commas
 states_str_cleaned2 <- 
-  str_to_upper(gsub(", ",
+  str_to_lower(gsub(", ",
        ",",
        (gsub(" ,",
              ",",
@@ -350,16 +352,16 @@ df_pirate_states$state <-
 
 
 unique(df_pirate_states$state)
-#NJ NY CT MD AK MA TX CA VA OH MO AL WV MI AZ PA MN FL NV WA NC OK CO IL LA GA NH TN ME IA IN DE KS SC KY UT WI SD OR VT ND RI NE MS HI NM AR MT ID WY DC
+```
+```{r distinct_states_sanity_check}
 df_pirate_states %>%dplyr::select(state) %>% distinct() %>% count() #51 because 50 + DC
 
 ```
 
-I want the states to be lower case
+I want occupation to be lower case
 ```{r factor_var_names_change}
 df_pirate_states %<>%
-  mutate(state = tolower(state),
-         occupation = tolower(occupation))
+  mutate(occupation = tolower(occupation))
 
 lapply(
   (df_pirate_states %>%
@@ -368,102 +370,17 @@ lapply(
   )
 ```
 
-```{r lvl_check}
-df_pirate_lvlcheck <- 
-  df_pirate_states %>%
-    mutate(level_matches_hours =
-             case_when(
-               ((.$mission_count < 20 &
-                   .$pirate_level == 1) |
-                  ((.$mission_count >= 20 &
-                      .$mission_count < 30) &
-                     .$pirate_level == 2) |
-                  ((.$mission_count >= 30 &
-                      .$mission_count < 60) &
-                     .$pirate_level == 3) |
-                  ((.$mission_count >= 60 &
-                      .$mission_count < 110) &
-                     .$pirate_level == 4) |
-                  ((.$mission_count >= 110 &
-                      .$mission_count < 260) &
-                     .$pirate_level == 5
-                  ) |
-                  ((.$mission_count >= 260 &
-                      .$mission_count < 510) &
-                     .$pirate_level == 6
-                  ) |
-                  ((.$mission_count >= 510 &
-                      .$mission_count < 1010) &
-                     .$pirate_level == 7
-                  ) |
-                  ((.$mission_count >= 1010 &
-                      .$mission_count < 2510) &
-                     .$pirate_level == 8
-                  ) |
-                  ((.$mission_count >= 2510 &
-                      .$mission_count < 5010) &
-                     .$pirate_level == 9
-                  ) |
-                  ((.$mission_count >= 5010 &
-                      .$mission_count < 10010) &
-                     .$pirate_level == 10
-                  ) |
-                  ((.$mission_count >= 10010) &
-                     .$pirate_level == 11) |
-                  (((.$mission_count == 0) |
-                      (
-                        is.na(.$mission_count) == TRUE
-                      )) &
-                     .$pirate_level == 0)
-               ) ~ "match",
-               TRUE ~ "no_match"
-             )) %>%
-   dplyr::filter(level_matches_hours == 'no_match')
-
-View(df_pirate_lvlcheck)
-
-```
-
-
-```{r count_levels}
-df_pirate_states %>%
- dplyr::select(pirate_level) %>%
-  group_by(pirate_level) %>%
-  count()
-```
-So starting level 7ish there are way less people that made it that far
-which is logical, but kinda makes me hesitant to dump folx probably at levels
-8 & 9, depending on how many of those there are, but I'll check and tbh
-probably dump them because I don't have the resources to contact DS/DE to see
-what that source of confusion might be, and I'd rather err in favor of the bias
-of dumping data than deciding which column is the true one. IRL I'd like to try
-and run the model with and without the noisy data if I can't figure out which
-is the true value, because usually those are pretty similar and then it doesn't
-matter; but if they're really different than we have a problem and we need to 
-dig deeper. 
-```{r count_wrong_levels}
-df_pirate_lvlcheck %>%
- dplyr::select(pirate_level) %>%
-  group_by(pirate_level) %>%
-  count()
-```
-So it's like half the people of level 9, which makes me very uncomfortable to
-just dump them. However, I really don't have the time to start checking every case
-I don't think, to understand better what's going on. If I have time I'll come back to
-it, but for now I'm going to dump them.
-FWIW 5 of them have missing state data, which I think is important
-and will discuss below, and some are missing occupation, so I think I'm okay with
-dumping even the level 9 folx for now.
-``` {r dump_wrong_level}
-df_pirate_states %<>%
- dplyr::filter(!pirate_id %in% df_pirate_lvlcheck$pirate_id) #filtering by keeping ids not in the mismatched df
-```
-
-
-For my target--whether the pirate churned out of piracy--I am going to look at whether the last time a pirate went on a mission was more than 60 days ago. If the answer to that is yes, they will be considered churned. This means that I should also probably dump all the data from people who did not have their first mission at least 61 days ago, because I would need 60 days to pass in order to determine whether they churned
+For my target--whether the pirate churned out of piracy--I am going to look at whether the last time a pirate went on a mission was more than 60 days ago. If the answer to that is yes, they will be considered churned. This means that I should also probably dump all the data from people who did not have their first mission at least 61 days ago, because I would need 60 days to pass in order to determine whether they churned. Additionally, if someone does not have a start or end date I have to remove them, since I cannot calculate whether or not they churned. While it is possible to use machine learning to determine the possible start and end date, I think that given that this is the target variable that would be introducing too much bias into our data, and I would not recommend doing it in this situation. I'll start by checking though how many rows I'd lose from dumping NAs, and it looks like it is just 585.
 ```{r}
+(df_pirate_states %>%
+   count()) -
+  (df_pirate_states %>%
+     drop_na(mission_last, mission_1)  %>%
+     count())
+
 df_pirate_eng <-
   df_pirate_states %>%
+  drop_na(mission_last, mission_1) %>%
   #is the time difference between anyone's most recent mission date and that person's first mission date over 60 days? If yes, keep them, because they will have had the time to churn
   filter(as.integer(difftime(
     max(mission_last, na.rm = TRUE), mission_1, units = "days"
@@ -480,10 +397,78 @@ df_pirate_eng <-
 
 ```
 
-Other things I want to do include finding the last month someone went on a mission;
-Descritizing age. Ideally, I'd take the time to plot everything and find what are meaningful cut off points relative to everything else, but I'm just going with what I think is logical here for brevity's sake;
-For every week the person hadn't yet churned, how many hours of missions, on average, did that person participate in during that week;
+Another type of investigation has to do with whether the levels all align with what we would expect them to be. That is, we know that until a pirate goes on 11 missions, they are level 1; from 11 to 30 missions they are level 2; 31 to 50 missions they are level 3; 51 to 80 is level 4; 81 to 120 is level 5; 121 + is level 6.
 
+To investigate that I will create a new column called level_matches_hours, and if the pirate's level matches what I would expect based on the above--or if they have no missions and are at level 0--I will populate it with "match", otherwise, I will populate the row in question with "no_match", and then investigate those rows without a match:
+```{r lvl_check}
+df_pirate_lvlcheck <- 
+  df_pirate_eng %>%
+    mutate(level_matches_hours =
+             case_when(
+               ((.$mission_count <= 10 &
+                   .$pirate_level == 1) |
+                  ((.$mission_count > 10 &
+                      .$mission_count < 31) &
+                     .$pirate_level == 2) |
+                  ((.$mission_count > 30 &
+                      .$mission_count < 51) &
+                     .$pirate_level == 3) |
+                  ((.$mission_count > 50 &
+                      .$mission_count < 81) &
+                     .$pirate_level == 4) |
+                  ((.$mission_count > 80 &
+                      .$mission_count < 121) &
+                     .$pirate_level == 5
+                  ) |
+                  (.$mission_count > 120 &
+                     .$pirate_level == 6
+                  ) |
+                  (((.$mission_count == 0) |
+                      (
+                        is.na(.$mission_count) == TRUE
+                      )) &
+                     .$pirate_level == 0)
+               ) ~ "match",
+               TRUE ~ "no_match"
+             )) %>%
+   dplyr::filter(level_matches_hours == 'no_match')
+
+View(df_pirate_lvlcheck)
+
+```
+
+
+```{r count_levels}
+df_pirate_eng %>%
+ dplyr::select(pirate_level) %>%
+  group_by(pirate_level) %>%
+  count()
+```
+So starting level 6 there are way less people that made it that far
+which is logical, but kinda makes me hesitant to dump folx at that level, depending on how many of those there are, but I'll check and tbh
+probably dump them because I don't have the resources to contact DS/DE to see
+what that source of confusion might be, and I'd rather err in favor of the bias
+of dumping data than deciding which column is the true one. IRL I'd like to try
+and run the model with and without the noisy data if I can't figure out which
+is the true value, because usually those are pretty similar and then it doesn't
+matter; but if they're really different than we have a problem and we need to 
+dig deeper. 
+```{r count_wrong_levels}
+df_pirate_lvlcheck %>%
+ dplyr::select(pirate_level) %>%
+  group_by(pirate_level) %>%
+  count()
+```
+So it's like half the people of level 6, which makes me very uncomfortable to
+just dump them. However, I really don't have the time to start checking every case
+I don't think, to understand better what's going on. If I have time I'll come back to
+it, but for now I'm going to dump them. I'm not even supposed to have a level 7, which means that it's as useless as NA, and should be deleted.
+``` {r dump_wrong_level}
+df_pirate_eng %<>%
+ dplyr::filter(!pirate_id %in% df_pirate_lvlcheck$pirate_id) #filtering by keeping ids not in the mismatched df
+```
+
+Other types of features that I want to do include finding the last month someone went on a mission, as well as descritized age. Ideally, I'd take the time to plot everything and find what are meaningful cut off points relative to everything else, but I'm just going with what I think is logical here for brevity's sake. Finally, I want to examine for every week the person hadn't yet churned, how many hours of missions, on average, did that person participate in during that week, and how many hours each of their missions took.
 ```{r}
 df_pirate_eng %<>%
   mutate(
@@ -495,17 +480,126 @@ df_pirate_eng %<>%
       (age > 25 &
          age < 31) ~ "age_26_30",
       (age > 30 &
-         age < 40) ~ "age_31_49",
-      (age > 39 &
-         age < 51) ~ "age_40_50",
+         age < 41) ~ "age_31_40",
+      (age > 40 &
+         age < 51) ~ "age_41_50",
       (age > 50 &
-         age < 99) ~ "age_51_65",
-      (age > 65) ~ "age_66_plus"
+         age < 65) ~ "age_51_64",
+      (age > 64) ~ "age_65_plus"
     ),
     mission_hours_per_week = mission_hours / as.double(round(
       difftime(mission_last, mission_1, units = "weeks"), digits = 3
-    ))
+    )), #mean hours per week for each active week
+    hours_per_mission = mission_hours / mission_count #mean hours per mission
   )
+
+```
+
+I would also like to engineer a feature that compares to the crew's mean amount of hours per mission, to that individual's hours per mission. If their mean hours per mission is either 2 standard deviations more, or 2 less than the crew's mean, they get a 1, otherwise they get a 0. From a coding point of view I start by creating a dataframe that has the crew's mean hours per mission + 2 SDs, and their mean - 2 SDs. I do this utilizing the dataframe, grouping by crew, and then summarizing to get each of those statistics. I then take the resulting dataframe, and left join it onto the original dataframe. This way, I still get my original dataframe, but it now also has each crew's mean + or - 2 SDs. I then mutate this joined dataframe to add a column that assigns 0 to folx who are not abnormally deviated from the mean, and 1 to those who are. I also drom the two columns that I created at the previous stage with the group's + and - 2 SDs from the mean, since I no longer need them.
+```{r}
+df_pirate_features <-
+  left_join(
+    df_pirate_eng,
+    (
+      df_pirate_eng %>%
+        group_by(crew) %>%
+        dplyr::select(crew, hours_per_mission) %>%
+        summarise(
+          crew_mission_hours_mean_plus2sd = mean(hours_per_mission, na.rm = TRUE) + (sd(hours_per_mission, na.rm = TRUE) * 2),
+          crew_mission_hours_mean_minus2sd = mean(hours_per_mission, na.rm = TRUE) - (sd(hours_per_mission, na.rm = TRUE) * 2)
+        )
+    )
+  ) %>% mutate(moreless_than_2sd_crew_missions_hours_mean = ifelse((hours_per_mission > crew_mission_hours_mean_plus2sd) |
+                                                                     (hours_per_mission < crew_mission_hours_mean_minus2sd),
+                                                                   1,
+                                                                   0
+  )) %>%
+    select(-crew_mission_hours_mean_plus2sd, -crew_mission_hours_mean_minus2sd)
+
+str(df_pirate_features)
+```
+    
+    
+```{r}
+psych::describe((df_pirate_features %>%
+  select_if(funs(is.numeric(.)))), na.rm = TRUE)
+
+```
+
+There seems be an infinity issue going on in mission_hours_per_week and hours_per_mission. Since that feature was a engineered by dividing one number into another, and the numerator could have been 0, I'm guessing this is where the issue arose, and therefore the infinity values should just be automatically to 0. Therefore, I want to examine whether the max values of those features is inf because the numerator--mission_count and the difference in days between the first and last mission--is 0. I can do this by filtering out all instances where hours_per_mission is inf but mission_count isn't 0, and counting those, as well as looking at whether infinity values of mission_hours_per_week occur when the active weeks, calculated as the time difference between the first and last mission dates, is different than 0, and count those
+```{r inf_mean_conv}
+df_pirate_features %>%
+ dplyr::select(mission_count, hours_per_mission) %>%
+ dplyr::filter(is.infinite(hours_per_mission) &
+           mission_count != 0) %>%
+  count()
+
+df_pirate_features %>%
+ dplyr::select(active_days, active_weeks, minutes_per_active_day, hours_per_week) %>%
+ dplyr::filter((is.infinite(minutes_per_active_day) & 
+            active_days != 0)) %>%
+  count()
+
+```
+
+The same as above, but 
+looking whether inf minutes_per_active_day and inf hours_per_week respectively co-occur
+with active_days and active_weeks that are different than 0, and we see that not
+```{r}
+
+```
+
+I actually want to quickly confirm that those three column are the only ones with
+inf values, and we see that's the case
+```{r}
+#looking at each column name
+for(c in colnames(df_ctl)){
+  #saving the boolean of whether there are infinite values in that column
+  val = length(which(sapply(df_ctl[{c}], function(x) any(is.infinite((x)))))) > 0
+  #If it's true and there are inf value we print out that column's name
+  ifelse(
+    val == TRUE, 
+    print(glue::glue("Column {c} has infinite values")), 
+    next
+    )
+}
+
+```
+
+So I'll change the mean_convo_len_min, minutes_per_active_day, and hours_per_week
+to 0 where it's inf
+Rerunning the code above shows this worked
+```{r}
+#modify is like map but instead of returning a list it returns the original data
+#ource type. It was messing with the datetimes tho, which is why I chose modify_if
+df_ctl_inf <-
+  df_ctl %>% 
+  modify_if(is.numeric, 
+            function(x) ifelse(is.infinite(x), 0, x))
+
+View(df_ctl_inf)
+```
+
+```{r}
+
+
+```
+
+
+```{r}
+
+
+```
+
+
+```{r}
+
+
+```
+
+
+```{r}
+
 
 ```
 
